--- a/package.xml
+++ b/package.xml
@@ -3,7 +3,7 @@
 <package format="3">
   <name>avoid_obstacle_cibernots</name>
   <version>0.2.0</version>
-  <description>Bump and Go behavior based on Finite State Machines (C++)</description>
+  <description>Avoid Obstacle behavior based on Finite State Machines (C++)</description>
   <maintainer email="fmrico@gmail.com">fmrico</maintainer>
   <license>Apache License, Version 2.0</license>
 
