--- a/param/params.yaml
+++ b/param/params.yaml
@@ -1,12 +1,12 @@
 avoid_obstacle:
   ros__parameters:
-    SPEED_LINEAR: 0.3f
-    SPEED_ANGULAR: 0.6f
-    OBSTACLE_DISTANCE: 0.5f
+    SPEED_LINEAR: 0.3
+    SPEED_ANGULAR: 0.6
+    OBSTACLE_DISTANCE: 0.5
     MULTIP_ARCH: 3.2
     MULTIP_TURN: 1.5
     
     # state_: 0
     # last_state_: 0
 
-    # use_sim_time: True
+    use_sim_time: False
